AgentDevelopmentTools/Soar-Editor/Editor/src/com/soartech/soar/ide/core/ast/SoarParser.java
/* Generated By:JavaCC: Do not edit this line. SoarParser.java */
package com.soartech.soar.ide.core.ast;

import java.io.InputStreamReader;

/**
	@author Brad Jones
	if you are looking at the java file, it isn't going to make a lot of sense
	I used the Java Compiler Compiler to make the lexer and parser
	the homepage is http://www.metamata.com
*/
public class SoarParser implements SoarParserConstants {

  final public SoarProductionAst soarProduction() throws ParseException {
        SoarProductionAst sp = new SoarProductionAst();
        Token t;
        String s;
    // its name	
            t = jj_consume_token(SYMBOLIC_CONST);
            sp.setName(t.image);
                sp.setStartLine(t.beginLine);
    handleDocumentationQuote(sp);
    if (jj_2_1(3)) {
      s = productionType();
                                sp.setProductionType(s);
    } else {
      ;
    }
    conditionSide(sp);
    jj_consume_token(RARROW);
    actionSide(sp);
    jj_consume_token(0);
        {if (true) return sp;}
    throw new Error("Missing return statement in function");
  }

  final public String productionType() throws ParseException {
        Token t;
    t = jj_consume_token(PRODTYPE);
                {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  void handleDocumentationQuote(SoarProductionAst sp) throws ParseException {
        Token start = getToken(1);
        if(start.kind == QUOTE) {
                getNextToken();
                Token tok = getToken(1);
                while(tok.kind != QUOTE && tok.kind != EOF) {
                        getNextToken();
                        tok = getToken(1);
                }
                if(tok.kind == EOF)
                {
                        ParseException e = new ParseException("Documentation quote not closed.");
                    e.currentToken = start;
                        throw e;
                }
                getNextToken();
        }
        sp.setComment("");
  }

/////////////////////////////////////////////////////////////
// The LHS of the production
//
// Added gp-style square brackets to DisjunctionTest. -Miller 5/19/2011
/*
	The grammar that this recognizes
	<ConditionSide> 			::= <Condition>+
	<FirstCondition>			::= '(' "state" VARIABLE <AttributeValueTest>* ')' 
	<Condition>					::= ['-'] PositiveCondition
	<PositiveCondition>	    	::= <ConditionForOneIdentifier>
									| '{' <Condition>+ '}'
	<ConditionForOneIdentifier>	::= '(' VARIABLE <AttributeValueTest>* ')'
	<AttributeValueTest>		::= ['-'] ^ <AttributeTest> ['.'<AttributeTest>]* <ValueTest>* 
	<AttributeTest>				::= <Test>
	<ValueTest>					::= <Test> ['+'] | '(' (VARIABLE)? <AttributeValueTest>* ')'
	<Test> 						::= <ConjunctiveTest> | <SimpleTest>
	<ConjunctiveTest>			::= '{' <SimpleTest>+ '}'
	<SimpleTest>				::= <DisjunctionTest> | <RelationalTest>
	<DisjunctionTest>			::= '<<' <Constant>+ '>>'
                                    | '[' <Constant>+ ']'
	<RelationalTest>            ::=	 [<Relation>] <SingleTest>
	<Relation>					::=  '<>' | '<=>' | '<' | '<=' | '>=' | '>' | '='
	<SingleTest>				::= <Constant> | VARIABLE
	<Constant> 					::= FLOATING_POINT_CONST | INTEGER_CONST | SYMBOLIC_CONST
*/

// Ok
  final public void conditionSide(SoarProductionAst sp) throws ParseException {
        Condition cond;
    label_1:
    while (true) {
      cond = condition();
                if(cond != null)
                        sp.addCondition(cond);
      if (jj_2_2(3)) {
        ;
      } else {
        break label_1;
      }
    }
  }

// Ok
  final public Condition condition() throws ParseException {
        boolean negated = false;
        PositiveCondition pcond;
    if (jj_2_3(3)) {
      jj_consume_token(HYPHEN);
                    negated = true;
    } else {
      ;
    }
    pcond = positiveCondition();
          {if (true) return new Condition(negated,pcond);}
    throw new Error("Missing return statement in function");
  }

// Ok
  final public PositiveCondition positiveCondition() throws ParseException {
        ConditionForOneIdentifier cfoi;
        Condition cond;
        PositiveCondition retVal;
    if (jj_2_5(3)) {
      cfoi = conditionForOneIdentifier();
                {if (true) return new PositiveCondition(cfoi);}
    } else if (jj_2_6(3)) {
      jj_consume_token(LBRACE);
                        retVal = new PositiveCondition();
      label_2:
      while (true) {
        cond = condition();
                        retVal.add(cond);
        if (jj_2_4(3)) {
          ;
        } else {
          break label_2;
        }
      }
      jj_consume_token(RBRACE);
          {if (true) return retVal;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public ConditionForOneIdentifier conditionForOneIdentifier() throws ParseException {
        Token t;
        AttributeValueTest avt;
        ConditionForOneIdentifier cfoi;
        boolean hasState = false;
    jj_consume_token(LPAREN);
    if (jj_2_7(3)) {
      t = jj_consume_token(SYMBOLIC_CONST);
                if(t.image.equals("state"))
                        hasState = true;
                else
                {
                    ParseException e = new ParseException("only state allowed.");
                    e.currentToken = t;
                        {if (true) throw e;}
            }
    } else {
      ;
    }
    t = jj_consume_token(VARIABLE);
                cfoi = new ConditionForOneIdentifier(hasState,new Pair(t.image, t.beginOffset, t.endOffset));
    label_3:
    while (true) {
      if (jj_2_8(3)) {
        ;
      } else {
        break label_3;
      }
      avt = attributeValueTest();
                cfoi.add(avt);
    }
    jj_consume_token(RPAREN);
          {if (true) return cfoi;}
    throw new Error("Missing return statement in function");
  }

// Ok
  final public AttributeValueTest attributeValueTest() throws ParseException {
        AttributeValueTest avt = new AttributeValueTest();
        AttributeTest at;
        ValueTest vt;
    if (jj_2_9(3)) {
      jj_consume_token(HYPHEN);
                avt.negate();
    } else {
      ;
    }
    jj_consume_token(CARET);
    at = attributeTest();
          avt.add(at);
    label_4:
    while (true) {
      if (jj_2_10(3)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(PERIOD);
      at = attributeTest();
                                         avt.add(at);
    }
    label_5:
    while (true) {
      if (jj_2_11(3)) {
        ;
      } else {
        break label_5;
      }
      vt = valueTest();
                            avt.add(vt);
    }
          {if (true) return avt;}
    throw new Error("Missing return statement in function");
  }

// Ok
  final public AttributeTest attributeTest() throws ParseException {
        Test t;
    t = test();
          {if (true) return new AttributeTest(t);}
    throw new Error("Missing return statement in function");
  }

// Ok
  final public ValueTest valueTest() throws ParseException {
        ValueTest vt;
        Test t;
        Token var;
        AttributeValueTest avt;
    if (jj_2_15(3)) {
      t = test();
            vt = new ValueTest(t);
      if (jj_2_12(3)) {
        jj_consume_token(PLUS);
            vt.acceptablePreference();
      } else {
        ;
      }
        {if (true) return vt;}
    } else if (jj_2_16(3)) {
      jj_consume_token(LPAREN);
            vt = new ValueTest();
      if (jj_2_13(3)) {
        var = jj_consume_token(VARIABLE);
            vt.setVariable(new Pair(var.image, var.beginOffset, var.endOffset));
      } else {
        ;
      }
      label_6:
      while (true) {
        if (jj_2_14(3)) {
          ;
        } else {
          break label_6;
        }
        avt = attributeValueTest();
            vt.addAttributeValueTest(avt);
      }
      jj_consume_token(RPAREN);
        {if (true) return vt;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public Test test() throws ParseException {
        ConjunctiveTest ct;
        SimpleTest st;
    if (jj_2_17(3)) {
      ct = conjunctiveTest();
          {if (true) return new Test(ct);}
    } else if (jj_2_18(3)) {
      st = simpleTest();
          {if (true) return new Test(st);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public ConjunctiveTest conjunctiveTest() throws ParseException {
        ConjunctiveTest retVal = new ConjunctiveTest();
        SimpleTest st;
    jj_consume_token(LBRACE);
    label_7:
    while (true) {
      st = simpleTest();
          retVal.add(st);
      if (jj_2_19(3)) {
        ;
      } else {
        break label_7;
      }
    }
    jj_consume_token(RBRACE);
          {if (true) return retVal;}
    throw new Error("Missing return statement in function");
  }

// Ok
  final public SimpleTest simpleTest() throws ParseException {
        DisjunctionTest dt;
        RelationalTest rt;
    if (jj_2_20(3)) {
      dt = disjunctionTest();
           {if (true) return new SimpleTest(dt);}
    } else if (jj_2_21(3)) {
      rt = relationalTest();
           {if (true) return new SimpleTest(rt);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public DisjunctionTest disjunctionTest() throws ParseException {
        DisjunctionTest dt = new DisjunctionTest();
        Constant c;
    if (jj_2_24(3)) {
      jj_consume_token(LDISJUNCT);
      label_8:
      while (true) {
        c = constant();
                           dt.add(c);
        if (jj_2_22(3)) {
          ;
        } else {
          break label_8;
        }
      }
      jj_consume_token(RDISJUNCT);
          {if (true) return dt;}
    } else if (jj_2_25(3)) {
      jj_consume_token(LSQBRACET);
      label_9:
      while (true) {
        c = constant();
                           dt.add(c);
        if (jj_2_23(3)) {
          ;
        } else {
          break label_9;
        }
      }
      jj_consume_token(RSQBRACET);
          {if (true) return dt;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public RelationalTest relationalTest() throws ParseException {
        int r = RelationalTest.EQ;
        SingleTest st;
    if (jj_2_26(3)) {
      r = relation();
    } else {
      ;
    }
    st = singleTest();
                {if (true) return new RelationalTest(r,st);}
    throw new Error("Missing return statement in function");
  }

// Ok
  final public int relation() throws ParseException {
    if (jj_2_27(3)) {
      jj_consume_token(NEQUAL);
                {if (true) return RelationalTest.NEQ;}
    } else if (jj_2_28(3)) {
      jj_consume_token(SAME_TYPE);
                {if (true) return RelationalTest.EQUIV;}
    } else if (jj_2_29(3)) {
      jj_consume_token(LESS);
                {if (true) return RelationalTest.LT;}
    } else if (jj_2_30(3)) {
      jj_consume_token(LEQUAL);
                {if (true) return RelationalTest.LTE;}
    } else if (jj_2_31(3)) {
      jj_consume_token(GEQUAL);
                {if (true) return RelationalTest.GTE;}
    } else if (jj_2_32(3)) {
      jj_consume_token(GREATER);
                {if (true) return RelationalTest.GT;}
    } else if (jj_2_33(3)) {
      jj_consume_token(EQUAL);
                {if (true) return RelationalTest.EQ;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public SingleTest singleTest() throws ParseException {
        Token t;
        Constant c;
    if (jj_2_34(3)) {
      t = jj_consume_token(VARIABLE);
                {if (true) return new SingleTest(new Pair(t.image, t.beginOffset, t.endOffset));}
    } else if (jj_2_35(3)) {
      c = constant();
                {if (true) return new SingleTest(c);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public Constant constant() throws ParseException {
        Token t;
    if (jj_2_36(3)) {
      t = jj_consume_token(FLOATING_POINT_CONST);
        try {
            {if (true) return new Constant(Float.parseFloat(t.image), t.beginOffset, t.endOffset);}
        }
        catch(NumberFormatException nfe) {
            {if (true) return new Constant(t.image, t.beginOffset, t.endOffset);}
        }
    } else if (jj_2_37(3)) {
      t = jj_consume_token(INTEGER_CONST);
                try {
                        {if (true) return new Constant(Integer.parseInt(t.image), t.beginOffset, t.endOffset);}
                }
                catch(NumberFormatException nfe) {
                        {if (true) return new Constant(t.image, t.beginOffset, t.endOffset);}
                }
    } else if (jj_2_38(3)) {
      t = jj_consume_token(SYMBOLIC_CONST);
                {if (true) return new Constant(t.image, t.beginOffset, t.endOffset);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//////////////////////////////////////////////////////////////
// Action Side
/* =====================================================================

   Grammar for right hand sides of productions

   <ActionSide> ::= <Action>*
   <Action> ::= <VarAttrValMake> | <FunctionCall>
   <VarAttrValMake> ::= ( VARIABLE <AttributeValueMake>+ )
   <FunctionCall> ::= ( <FunctionName> (<RHSValue>)* )
   <FunctionName> ::= SYMBOLIC_CONST | + | -
     (WARNING: might need others besides +, - here if the lexer changes)
   <RHSValue> ::= <Constant> | <FunctionCall> | VARIABLE
   <Constant> ::= SYMBOLIC_CONST | INTEGER_CONST | FLOATING_POINT_CONST
   <AttributeValueMake> ::= ^ <RHSValue> ['.'<RHSValue>]* <ValueMake>+
   <ValueMake> ::= <RHSValue> <Preferences>
   <Preferences> ::= <PreferenceSpecifier>*   
   <PreferenceSpecifier> ::= <NaturallyUnaryPreference> [,]
                            | <ForcedUnaryPreference>
                            | <BinaryPreference> <RHSValue> [,]
   <NaturallyUnaryPreference> ::= + | - | ! | ~ 
   <BinaryPreference> ::= > | = | < 
   <ForcedUnaryPreference> ::= <BinaryPreference> [,]   
===================================================================== */

// Done
  final public void actionSide(SoarProductionAst sp) throws ParseException {
        Action a;
    label_10:
    while (true) {
      if (jj_2_39(3)) {
        ;
      } else {
        break label_10;
      }
      a = action();
                if(a != null)
                        sp.addAction(a);
    }
  }

// Ok
  final public Action action() throws ParseException {
        Token t;
        VarAttrValMake vavm;
        FunctionCall fc;
    if (jj_2_40(3)) {
      vavm = varAttrValMake();
                {if (true) return new Action(vavm);}
    } else if (jj_2_41(3)) {
      fc = functionCall();
                {if (true) return new Action(fc);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Ok
  final public VarAttrValMake varAttrValMake() throws ParseException {
        Token t;
        VarAttrValMake retVal;
        AttributeValueMake avm;
    jj_consume_token(LPAREN);
    t = jj_consume_token(VARIABLE);
          retVal = new VarAttrValMake(new Pair(t.image, t.beginOffset, t.endOffset));
    label_11:
    while (true) {
      avm = attributeValueMake();
                                      retVal.add(avm);
      if (jj_2_42(3)) {
        ;
      } else {
        break label_11;
      }
    }
    jj_consume_token(RPAREN);
          {if (true) return retVal;}
    throw new Error("Missing return statement in function");
  }

// Ok
  final public FunctionCall functionCall() throws ParseException {
        Pair funcName;
        FunctionCall funcCall;
        RHSValue rhsv;
    jj_consume_token(LPAREN);
    funcName = functionName();
                                     funcCall = new FunctionCall(funcName);
    label_12:
    while (true) {
      if (jj_2_43(3)) {
        ;
      } else {
        break label_12;
      }
      rhsv = rhsValue();
                            funcCall.add(rhsv);
    }
    jj_consume_token(RPAREN);
          {if (true) return funcCall;}
    throw new Error("Missing return statement in function");
  }
